Fix vertical alignment in the rename field in Files.app.
This patch replaces line-height with padding to avoid an ugly, not centered selection.

TBR=yoshiki@chromium.org
TEST=Go to Files.app, edit a file.
BUG=239305

Review URL: https://chromiumcodereview.appspot.com/16007010

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@202813 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: b9dd16dfd3a87d309d949837adec43224affca59

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -1416,9 +1416,8 @@ body[new-ui] #volume-list > .accepts,
 
 /* Text box used for renaming in the detail list. */
 .table-row-cell input.rename {
-  -webkit-margin-start: -3px;
   border-width: 0;
-  line-height: 20px;
+  padding: 2px 0;
 }
 
 input.rename:focus {
